# bashCASH

./: .gitignore  README.md
.github/workflows/: README.md  bashcash-ci.yml  deploy.yml  pr.yml
bashcash/: AGENTS.md  README.md  api-contract.md
bashcash/be/: pyproject.toml
bashcash/be/app/: main.py  schemas.py  sessions.py  vfs.py
bashcash/be/bashcash_be.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
bashcash/be/tests/: conftest.py  test_main_api.py  test_sessions.py  test_vfs.py
bashcash/fe/: index.html  package-lock.json  package.json  vite.config.ts
bashcash/fe/src/: App.tsx  main.tsx
bashcash/fe/src/api/: client.test.ts  client.ts  types.ts
bashcash/fe/src/components/: BashCashLayout.css  BashCashLayout.tsx  ImageModal.css  ImageModal.tsx  (+6 more)
deaddrop/be/: package-lock.json  package.json  tsconfig.json
deaddrop/be/functions/: api.ts  delete-worker.ts  notification.ts  stream-processor.ts
deaddrop/be/src/: config.ts  index.ts  types.ts
deaddrop/fe/: index.html  package-lock.json  package.json
deaddrop/fe/src/: App.css  App.tsx
terraform/: .terraform.lock.hcl  README.md  bashcash_project.tf  deaddrop_project.tf  main.tf
terraform/modules/bashcash-backend/: README.md  acm.tf  api_gateway.tf  build.tf  dynamodb.tf  iam.tf  lambda.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/cloudfront-spa/: README.md  certificate.tf  cloudfront.tf  source_bucket.tf  variables.tf  versions.tf
terraform/modules/deaddrop-backend/: README.md  build.tf  cloudwatch.tf  dynamodb.tf  iam.tf  kms.tf  lambda.tf  ses.tf  sns.tf  sqs.tf  variables.tf
(+48 files in other folders)
