[project]
name = "bashcash-be"
version = "0.1.0"
description = "Backend for BashCash"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "mangum>=0.17.0",
    "pydantic>=2.7.0",
    "boto3>=1.34.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
